--- a/basecom/templates/basecom/home.html
+++ b/basecom/templates/basecom/home.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="ja">
     <head>
     <title id="navTitle" data-title="タイトル">skyopener</title>
@@ -20,6 +21,6 @@ opacity:1}
      <div id="RomMain"></div>
   </body>
 
-     <script type="text/javascript" crossorigin src="/static/js/umd_main.js?p={{fileparam}}"></script> 
+     <script type="text/javascript" crossorigin  src="{% static 'js/umd_main.js' %}?p={{fileparam}}"  ></script> 
 
 </html>
