--- a/basecom/templates/basecom/home.html
+++ b/basecom/templates/basecom/home.html
@@ -18,7 +18,7 @@ body{margin:0;padding:0;font-size:"0.1em";
 opacity:1}
 </style>
 
-     <div data-picurl="/static/pic" id="RomMain"></div>
+     <div data-baseurl="" data-picurl="/static/pic" id="RomMain"></div>
   </body>
 
      <script type="text/javascript" crossorigin  src="{% static 'js/umd_main.js' %}?p={{fileparam}}"  ></script> 
