--- a/basecom/templates/basecom/profile.html
+++ b/basecom/templates/basecom/profile.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <div data-baseurl=""  data-picurl="/static/pic" id="RomNavi"></div>
-<div data-baseurl="" data-picurl="/static/pic" id="RomMain"></div>
+<div data-baseurl=""  data-picurl="/static/pic" id="RomProf"></div>
+
 
 {% endblock %}
