--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -20,8 +20,20 @@ body{
 opacity:1}
 </style>
 
+<div data-baseurl=""  data-picurl="/static/pic" id="RomNavi"></div>
 {% block content %}
 {% endblock %}
+     <footer id="rm_footer" data-sitestring="rom">
+     Copyright © rom 2024-2024 All Rights Reserved.
+     <ul>
+      <a data-href="/"
+         data-title="."
+         href="/"><li>.</li></a>
+      <a data-href="/"
+         data-title=""
+       href="/"><li ></li></a>
+     </ul>
+     </footer>
 
 
 
