--- a/basecom/templates/basecom/home.html
+++ b/basecom/templates/basecom/home.html
@@ -1,7 +1,14 @@
 {% extends "basecom/base.html" %}
 
 {% block content %}
-<div data-baseurl=""  data-picurl="/static/pic" id="RomNavi"></div>
+
+<div id="rom_urllist">{% for p in posted %}
+ <a data-urlname="/post/{{p.url_name}}.html" data-titlename="{{ p.post_title }}" data-created_at="{{p.created_at | date:"Y/m/d"}}" href="/post/{{p.url_name}}.html">
+{{ p.post_title }}
+</a>
+{% endfor %}</div>
+
+
 <div data-baseurl="" data-picurl="/static/pic" id="RomMain"></div>
 
 {% endblock %}
