--- a/basecom/templates/basecom/home.html
+++ b/basecom/templates/basecom/home.html
@@ -1,7 +1,11 @@
 {% extends "basecom/base.html" %}
 
 {% block content %}
-
+<style>
+.rom_urllist{
+ display:none;
+}
+</style>
 <div id="rom_urllist">{% for p in posted %}
  <a data-urlname="/post/{{p.url_name}}.html" data-titlename="{{ p.post_title }}" data-created_at="{{p.created_at | date:"Y/m/d"}}" href="/post/{{p.url_name}}.html">
 {{ p.post_title }}
