--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -17,7 +17,7 @@
 body{
  overflow-x:hidden;
  margin:0;padding:0;font-size:"0.1em";
-opacity:1}
+}
 </style>
 
 <div data-baseurl=""  data-picurl="/static/pic" id="RomNavi"></div>
@@ -25,6 +25,11 @@ opacity:1}
 {% endblock %}
      <footer id="rm_footer" data-sitestring="rom">
      Copyright © rom 2024-2024 All Rights Reserved.
+<style>
+body{opacity:0}
+</style>
+
+
      <ul>
       <a data-href="/"
          data-title="."
