--- a/basecom/templates/basecom/home.html
+++ b/basecom/templates/basecom/home.html
@@ -2,9 +2,16 @@
 
 {% block content %}
 
+<div data-baseurl="" data-picurl="/static/pic" id="RomMain">
+ <a href="https://wordpress.com/ja/"
+  data-href="https://wordpress.com/ja/"
+  data-title="Wordpress"
+  data-picname="wordpress-icon.png">気楽に扱えるWordPressを用いたシステムを開発いたします</a>
+ <a href="https://docs.djangoproject.com/ja" data-href="https://docs.djangoproject.com/ja" data-title="django開発" data-picname="logo-django.svg">サーバーサイドの開発に、セキュリティを意識した「django」を採用可能です</a>
+ <a href="https://ja.legacy.reactjs.org/" data-href="https://ja.legacy.reactjs.org/" data-title="React開発" data-picname="react-icon.png">Reactにてウェブデザインを担当いたします</a>
 
-<div data-baseurl="" data-picurl="/static/pic" id="RomMain"></div>
 
+</div>
 
 <div id="rom_urllist"  data-baseurl="" data-picurl="/static/pic">{% for p in posted %}
 <style>
