--- a/basecom/templates/basecom/post.html
+++ b/basecom/templates/basecom/post.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div id="rom_content" data-title="{{content.post_title}}">
+<div id="rom_content" data-title="{{content.post_title}}" data-title="{{content.created_at}}">
 <div> {{content.post_title}}</div>
 <div id="rom_content_content">
 {{content.post_content}}
