--- a/basecom/templates/basecom/home.html
+++ b/basecom/templates/basecom/home.html
@@ -25,5 +25,16 @@
 {% endfor %}</div>
 
 
+<style>
+#rom_page{
+ width:100%;
+ height:1000px;
+ background-color:rgba(100,100,100,1);
+ display:inline-block;
+ 
+
+}
+</style>
+
 
 {% endblock %}
