--- a/basecom/templates/basecom/post.html
+++ b/basecom/templates/basecom/post.html
@@ -3,7 +3,44 @@
 {% block content %}
 
 <div id="rom_content" data-title="{{content.post_title}}" data-title="{{content.created_at}}">
-<div> {{content.post_title}}</div>
+<div id="rom_content_title"> {{content.post_title}}</div>
+<style>
+div#rom_content:has(div#rom_content_content){
+ text-align:center;
+ padding-bottom:100px;
+ padding-top:100px;
+
+}
+
+#rom_content_title{
+ display:block
+
+}
+#rom_content_content{
+ display:inline-block
+
+}
+ @media screen and (min-width:0px) {
+#rom_content_title{
+ font-size:1.7em;
+}
+  #rom_content_content {
+ width:100%;
+    color:red;
+ font-size:1.5em;
+  }
+}@media screen and (min-width:600px) {
+#rom_content_title{
+ font-size:1.7em;
+}
+  #rom_content_content {
+    color: blue;
+    font-size:2em;
+  }
+
+
+
+</style>
 <div id="rom_content_content">
 {{content.post_content}}
 </div>
