--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -47,5 +47,6 @@ body{opacity:0}
 </body>
 
      <script type="text/javascript" crossorigin  src="{% static 'js/umd_main.js' %}?p={{fileparam}}"  ></script> 
+     <link rel="stylesheet" href="{% static 'css/style.css' %}?p={{fileparam2}}">
 
 </html>
