--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -20,7 +20,13 @@ body{
 }
 </style>
 
-<div data-baseurl=""  data-picurl="/static/pic" id="RomNavi"></div>
+<div data-baseurl=""  data-picurl="/static/pic" id="RomNavi">
+<a href="index.html" data-linkurl="index.html" data-titlename="案内">案内</a>
+<a href="loglist.html" data-linkurl="loglist.html"  data-titlename="活動紹介">活動紹介</a>
+<a href="profile.html" data-linkurl="profile.html"  data-titlename="プロフィール">プロフィール</a>
+<a href="index.html" data-linkurl="index.html"  data-titlename="スペシャルサンクス">スペシャルサンクス</a>
+</div>
+
 {% block content %}
 {% endblock %}
      <footer id="rm_footer" data-sitestring="rom">
@@ -32,7 +38,7 @@ body{opacity:0}
 
      <ul>
       <a data-href="/"
-         data-title="."
+         data-title="コンタクト"
          href="/"><li>.</li></a>
       <a data-href="/"
          data-title=""
