--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -2,7 +2,7 @@
 {% load static %}
 <html lang="ja">
     <head>
-    <title id="navTitle" data-title="タイトル">skyopener</title>
+    <title id="navTitle" data-title="タイトル">rommet</title>
 <meta http-equiv=”Content-Type” content=”text/html; charset="utf-8">
 
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -24,7 +24,7 @@ body{
 <a href="index.html" data-linkurl="index.html" data-titlename="案内">案内</a>
 <a href="loglist.html" data-linkurl="loglist.html"  data-titlename="活動紹介">活動紹介</a>
 <a href="profile.html" data-linkurl="profile.html"  data-titlename="プロフィール">プロフィール</a>
-<a href="index.html" data-linkurl="index.html"  data-titlename="スペシャルサンクス">スペシャルサンクス</a>
+<a href="contact.html" data-linkurl="contact.html"  data-titlename="Cotact">Contact</a>
 </div>
 
 {% block content %}
@@ -37,9 +37,9 @@ body{opacity:0}
 
 
      <ul>
-      <a data-href="/"
-         data-title="コンタクト"
-         href="/"><li>.</li></a>
+      <a data-href="/contact.html"
+         data-title="Contact"
+         href="/contact.html"><li>.</li></a>
       <a data-href="/"
          data-title=""
        href="/"><li ></li></a>
