--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -24,7 +24,7 @@ body{
 <a href="index.html" data-linkurl="index.html" data-titlename="案内">案内</a>
 <a href="loglist.html" data-linkurl="loglist.html"  data-titlename="活動紹介">活動紹介</a>
 <a href="profile.html" data-linkurl="profile.html"  data-titlename="プロフィール">プロフィール</a>
-<a href="contact.html" data-linkurl="contact.html"  data-titlename="Cotact">Contact</a>
+<a href="contact.html" data-linkurl="contact.html"  data-titlename="Contact">Contact</a>
 </div>
 
 {% block content %}
