--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,23 @@
+div#rm_contactform {
+  margin-top: 20vh;
+  height: 80vh;
+  text-align: center; }
+  @media screen and (min-width: 0px) {
+    div#rm_contactform {
+      width: 100vw; } }
+  @media screen and (min-width: 600px) {
+    div#rm_contactform {
+      width: 80vw;
+      margin-left: 10vh;
+      margin-right: 10vh; } }
+
+div#rm_contactform > form {
+  display: inline-block;
+  width: 200px;
+  height: 300px;
+  margin: 0;
+  text-align: left; }
+
 div.rm_realurllist {
   text-align: center;
   min-height: 80vh; }
@@ -11,15 +31,15 @@ div.rm_realurllist {
     background-color: #ebe6e6;
     display: inline-block;
     text-align: center;
-    padding: 0.1em;
-    margin: 0.1em; }
+    padding: 0.0em;
+    margin: 0.0em; }
     @media screen and (min-width: 0px) {
       div.rm_realurllist div {
-        width: 100%;
+        width: 100vw;
         font-size: 2em; } }
     @media screen and (min-width: 600px) {
       div.rm_realurllist div {
-        width: 70%;
+        width: 70vw;
         font-size: 1.5em; } }
   div.rm_realurllist a {
     color: black;
