--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,13 +10,50 @@ div#rm_contactform {
       width: 80vw;
       margin-left: 10vh;
       margin-right: 10vh; } }
-
-div#rm_contactform > form {
-  display: inline-block;
-  width: 200px;
-  height: 300px;
-  margin: 0;
-  text-align: left; }
+  div#rm_contactform > form {
+    display: inline-block;
+    height: 300px;
+    margin: 0;
+    text-align: left;
+    padding-top: 2em;
+    padding-bottom: 2em;
+    background-color: #ffc8c8; }
+    @media screen and (min-width: 600px) {
+      div#rm_contactform > form {
+        padding: 5em; } }
+    @media screen and (min-width: 0px) {
+      div#rm_contactform > form {
+        padding: 0em; } }
+    div#rm_contactform > form > label {
+      margin-left: 5vw;
+      margin-right: 5vw;
+      display: block;
+      text-align: left; }
+    div#rm_contactform > form > input[type=submit] {
+      width: 50%;
+      margin-left: 25%;
+      margin-right: 25%; }
+    div#rm_contactform > form > input {
+      padding: 0; }
+      @media screen and (min-width: 0px) {
+        div#rm_contactform > form > input {
+          width: 90vw;
+          margin-left: 5vw;
+          margin-right: 5vw; } }
+      @media screen and (min-width: 600px) {
+        div#rm_contactform > form > input {
+          width: 30em; } }
+    div#rm_contactform > form > textarea {
+      height: 8em;
+      padding: 0; }
+      @media screen and (min-width: 0px) {
+        div#rm_contactform > form > textarea {
+          width: 90vw;
+          margin-left: 5vw;
+          margin-right: 5vw; } }
+      @media screen and (min-width: 600px) {
+        div#rm_contactform > form > textarea {
+          width: 30em; } }
 
 div.rm_realurllist {
   text-align: center;
