--- a/static/css/style.css
+++ b/static/css/style.css
@@ -69,14 +69,45 @@ div#rm_contactform {
           width: 35em !important; } }
 
 div.rm_realurllist {
+  font-family: 'DotGothic16';
   text-align: center;
-  min-height: 80vh; }
+  min-height: 80vh;
+  padding: 0.4em;
+  margin-bottom: 100px; }
+  div.rm_realurllist .rm_postblock {
+    margin: 3px;
+    min-height: 200px;
+    border: solid 1px black; }
   @media screen and (min-width: 0px) {
     div.rm_realurllist {
-      margin-top: 15vh; } }
+      margin-top: 18vh; } }
   @media screen and (min-width: 600px) {
     div.rm_realurllist {
-      margin-top: 18vh; } }
+      margin-top: 28vh !important; } }
+  div.rm_realurllist .content_mini {
+    font-size: 0.7em;
+    text-align: left;
+    padding-left: 2em;
+    padding-right: 1em;
+    box-sizing: border-box; }
+  div.rm_realurllist .title {
+    padding-top: 0.6em;
+    padding-left: 0.6em;
+    box-sizing: border-box;
+    text-align: left;
+    line-height: 2.2em; }
+    div.rm_realurllist .title img {
+      height: 2.2em !important;
+      width: 3em !important;
+      display: inline-block;
+      background-color: blue;
+      vertical-align: middle;
+      margin-right: 1em; }
+  div.rm_realurllist .desc {
+    font-size: 0.5em;
+    text-align: right;
+    padding-right: 2em;
+    box-sizing: border-box; }
   div.rm_realurllist div {
     background-color: #ebe6e6;
     display: inline-block;
