--- a/basecom/templates/basecom/contact.html
+++ b/basecom/templates/basecom/contact.html
@@ -1,22 +1,24 @@
 {% extends "basecom/base.html" %}
 {% block content %}
+{% load static %}
 
 <style>
 </style>
-<div id="rm_contactform">
+<div id="rm_contactform2">
 <form  method="post">
     {% csrf_token %}
 
     <label for="name">名前: </label>
-    <input data-display="名前" class="rm_inputpost"  type="text" name="name" id="name"  /><br>
+    <input data-display="名前" class="rm_inputpost"  type="text" name="name" id="name"  />
 
     <label for="mail">メール: </label>
-    <input data-display="メール" class="rm_inputpost"  type="text" name="mail" id="mail"  /><br>
+    <input data-display="メール" class="rm_inputpost"  type="text" name="mail" id="mail"  />
 
     <label for="contact">お問い合わせ: </label>
-    <textarea  data-display="本文" class="rm_inputpost"  name="contact" id="contact"  ></textarea><br>
+    <textarea  data-display="本文" class="rm_inputpost"  name="contact" id="contact"  ></textarea>
 
-    <input type="submit" value="送信" />
+    <input type="submit" id="sbm" value="送信" />
 </form>
 </div>
+<link rel="stylesheet" href="{% static 'css/contact.css' %}?p={{fileparam}}">
 {% endblock %}
