--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -52,7 +52,7 @@ body{opacity:0}
 
 </body>
 
-     <script type="text/javascript" crossorigin  src="{% static 'js/umd_main.js' %}?p={{fileparam}}"  ></script> 
+     <script type="text/javascript" crossorigin  src="{% static 'js/umd_main.js' %}?p={{fileparam_js}}"  ></script> 
      <link rel="stylesheet" href="{% static 'css/style.css' %}?p={{fileparam2}}">
 
 </html>
