--- a/static/css/contact.css
+++ b/static/css/contact.css
@@ -4,22 +4,36 @@ div#rm_contactform2 {
   min-height: 80vh;
   text-align: center; }
   div#rm_contactform2 form {
-    text-align: center;
+    box-shadow: 5px 1px 75px rgba(222, 222, 222, 0.6);
+    border-radius: 5px;
     background-color: #ffc8c8;
-    padding: 0.5em;
-    display: inline-block; }
+    box-sizing: border-box;
+    display: inline-block;
+    text-align: center;
+    padding-top: 1.5em;
+    padding-bottom: 1.5em; }
     @media screen and (max-width: 1000px) {
       div#rm_contactform2 form {
-        width: 100vw; } }
+        width: 100vw;
+        font-size: 1.2em;
+        padding-left: 0.1em;
+        padding-right: 0.1em; } }
     @media screen and (min-width: 1000px) {
       div#rm_contactform2 form {
-        width: 30vw; } }
+        width: 30vw;
+        padding-left: 2.5em;
+        padding-right: 2.5em; } }
     div#rm_contactform2 form label {
       display: block;
       text-align: left; }
     div#rm_contactform2 form input {
       display: block;
       width: 50%; }
+      @media screen and (max-width: 1000px) {
+        div#rm_contactform2 form input {
+          font-size: 1.1em;
+          padding: 0.3em;
+          box-sizing: border-box; } }
     div#rm_contactform2 form input#sbm {
       width: 6em !important;
       display: inline-block;
