--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -3,14 +3,10 @@
 <html lang="ja">
     <head>
     <title id="navTitle" data-title="タイトル">rommet</title>
-<meta http-equiv=”Content-Type” content=”text/html; charset="utf-8">
-
+<meta http-equiv="Content-Type" content="text/html;" charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-
-
 <link href='https://fonts.googleapis.com/css?family=Dela Gothic One' rel='stylesheet' type='text/css'>
-
-
+<link rel="icon" href="{% static 'favicon.png' %}">
     </head>
 <body >
 <style>
