--- a/static/css/urllist.css
+++ b/static/css/urllist.css
@@ -1,3 +1,15 @@
+.rmdsn {
+  color: green;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  opacity: 0.5;
+  line-height: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-image: linear-gradient(150deg, rgba(255, 255, 255, 0.5) 60%, transparent 0); }
+
 div.rm_realurllist {
   opacity: 1 !important;
   font-family: 'DotGothic16';
@@ -42,6 +54,7 @@ div.rm_realurllist {
     min-height: 200px;
     box-sizing: border-box;
     border: solid 1px black;
+    position: relative;
     max-width: 90vw; }
   @media screen and (min-width: 0px) {
     div.rm_realurllist {
@@ -85,7 +98,9 @@ div.rm_realurllist {
     font-size: 0.5em;
     text-align: right;
     padding-right: 2em;
-    box-sizing: border-box; }
+    box-sizing: border-box;
+    position: relative;
+    z-index: 2; }
   div.rm_realurllist > div {
     background-color: #ebe6e6;
     display: inline-block;
