--- a/static/css/urllist.css
+++ b/static/css/urllist.css
@@ -8,7 +8,8 @@
   width: 100%;
   height: 100%;
   z-index: 1;
-  background-image: linear-gradient(150deg, rgba(255, 255, 255, 0.5) 60%, transparent 0); }
+  background-image: linear-gradient(150deg, rgba(255, 255, 255, 0.5) 60%, transparent 0);
+  pointer-events: none; }
 
 div.rm_realurllist {
   opacity: 1 !important;
