--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -16,7 +16,7 @@ body{
 }
 </style>
 
-<div data-baseurl=""  data-picurl="/static/pic" id="RomNavi">
+<div data-baseurl=""  data-picurl="/static/pic" id="RomNavi" style="height:20vh;">
 <a href="index.html" data-linkurl="index.html" data-titlename="案内">案内</a>
 <a href="loglist.html" data-linkurl="loglist.html"  data-titlename="活動紹介">活動紹介</a>
 <a href="profile.html" data-linkurl="profile.html"  data-titlename="プロフィール">プロフィール</a>
