--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -22,6 +22,7 @@ body{
 <a href="profile.html" data-linkurl="profile.html"  data-titlename="プロフィール">プロフィール</a>
 <a href="contact.html" data-linkurl="contact.html"  data-titlename="Contact">Contact</a>
 </div>
+<!-- <div style="height:13vh"></div> -->
 
 {% block content %}
 {% endblock %}
