--- a/static/css/contact.css
+++ b/static/css/contact.css
@@ -1,8 +1,13 @@
 div#rm_contactform2 {
   display: block;
-  margin-top: 20em;
   min-height: 80vh;
   text-align: center; }
+  @media screen and (max-width: 1000px) {
+    div#rm_contactform2 {
+      margin-top: 9em; } }
+  @media screen and (min-width: 1000px) {
+    div#rm_contactform2 {
+      margin-top: 10em; } }
   div#rm_contactform2 form {
     box-shadow: 5px 1px 75px rgba(222, 222, 222, 0.6);
     border-radius: 5px;
