--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,152 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=DotGothic16");
-#rom_urllist2 {
-  font-family: DotGothic16;
-  position: relative;
-  background-color: rgba(0, 0, 0, 0.8);
-  padding-top: 10vh;
-  padding-bottom: 10vh;
-  text-align: right;
-  overflow: hidden;
-  display: flex !important;
-  align-items: stretch;
-  justify-content: center; }
-  @media screen and (min-width: 0px) {
-    #rom_urllist2 {
-      margin: 1vh;
-      padding-left: 0vw;
-      padding-right: 1vw;
-      border-bottom: white solid 5px;
-      border-top: white solid 5px; } }
-  @media screen and (min-width: 600px) {
-    #rom_urllist2 {
-      margin: 4vh;
-      padding-left: 10vw;
-      padding-right: 10vw; } }
-  #rom_urllist2 > .next {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    font-size: 2em; }
-  #rom_urllist2 > img {
-    object-fit: contain;
-    padding: 10px;
-    box-sizing: border-box;
-    background-color: rgba(255, 100, 100, 0.2); }
-    @media screen and (min-width: 0px) {
-      #rom_urllist2 > img {
-        width: 40%; } }
-    @media screen and (min-width: 600px) {
-      #rom_urllist2 > img {
-        width: 30%; } }
-  #rom_urllist2 div.wrapper {
-    border-left: 2px solid white;
-    text-align: left;
-    display: inline-block;
-    width: 60%; }
-    @media screen and (min-width: 0px) {
-      #rom_urllist2 div.wrapper {
-        margin-left: 0.25em; } }
-    @media screen and (min-width: 600px) {
-      #rom_urllist2 div.wrapper {
-        margin-left: 3em; } }
-  #rom_urllist2 a {
-    font-size: 1.5em;
-    display: inline-block;
-    text-decoration: none;
-    color: white;
-    white-space: nowrap;
-    padding-top: 0.1em; }
-    @media screen and (min-width: 0px) {
-      #rom_urllist2 a {
-        padding-left: 0.25em; } }
-    @media screen and (min-width: 600px) {
-      #rom_urllist2 a {
-        padding-left: 3em; } }
-    #rom_urllist2 a:visited {
-      color: white; }
-
-#romMidashi {
-  background-color: #467a47;
-  font-size: 2.5em;
-  color: white;
-  height: 4em;
-  position: relative;
-  display: block !important; }
-  #romMidashi div {
-    padding-right: 0.6em;
-    padding-bottom: 0.2em;
-    position: absolute;
-    right: 0px;
-    bottom: 0; }
-
-div#rm_contactform {
-  margin-top: 20vh;
-  height: 80vh;
-  text-align: center; }
-  @media screen and (min-width: 0px) {
-    div#rm_contactform {
-      width: 100vw; } }
-  @media screen and (min-width: 600px) {
-    div#rm_contactform {
-      width: 80vw;
-      margin-left: 10vw;
-      margin-right: 10vw; } }
-  div#rm_contactform > form {
-    overflow-x: hidden;
-    display: inline-block;
-    padding-top: 1em;
-    padding-bottom: 4em;
-    text-align: left;
-    background-color: #ffc8c8;
-    box-sizing: border-box; }
-    @media screen and (min-width: 600px) {
-      div#rm_contactform > form {
-        padding-left: 5em !important;
-        padding-right: 5em !important;
-        width: auto !important; } }
-    @media screen and (min-width: 0px) {
-      div#rm_contactform > form {
-        padding-left: 0em;
-        padding-right: 0em;
-        margin-left: 0vw;
-        margin-right: 0vw;
-        width: 100vw; } }
-    div#rm_contactform > form > label {
-      font-family: 'DotGothic16';
-      margin-top: 0.4em;
-      margin-left: 1em;
-      display: block;
-      text-align: left; }
-    div#rm_contactform > form > input[type=submit] {
-      font-family: 'DotGothic16';
-      display: block;
-      width: 50%;
-      margin-right: auto; }
-    div#rm_contactform > form > input {
-      display: block;
-      font-size: 1.1em;
-      padding: 0.3em;
-      margin: auto;
-      box-sizing: border-box; }
-      @media screen and (min-width: 0px) {
-        div#rm_contactform > form > input {
-          width: 20em; } }
-      @media screen and (min-width: 600px) {
-        div#rm_contactform > form > input {
-          width: 30em !important; } }
-    div#rm_contactform > form > textarea {
-      font-size: 1.1em;
-      padding: 0.3em;
-      display: block;
-      box-sizing: border-box;
-      margin: auto;
-      height: 8em; }
-      @media screen and (min-width: 0px) {
-        div#rm_contactform > form > textarea {
-          width: 25em; } }
-      @media screen and (min-width: 600px) {
-        div#rm_contactform > form > textarea {
-          width: 35em !important; } }
+body {
+  background-image: linear-gradient(94deg, rgba(200, 200, 200, 0.7) 80%, #7a7a7a); }
 
 div#rom_content:has(div#rom_content_content) {
   text-align: center;
