--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -25,6 +25,8 @@ body{
 
 {% if host != "www.skyopener2.shop" %}
 <div style="height:20vh"></div>
+{% else %}
+<div style="height:10vh"></div>
 {% endif %}
 
 {% block content %}
