--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -26,9 +26,9 @@ body{
 </div>
 
 {% if host != "www.skyopener2.shop" %}
-<div style="height:20vh"></div>
+<div class="rmdmin"></div>
 {% else %}
-<div style="height:10vh"></div>
+<div class="rmdmin_ad"></div>
 {% endif %}
 
 {% block content %}
