--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,20 @@
 body {
   background-image: linear-gradient(94deg, rgba(200, 200, 200, 0.7) 80%, #7a7a7a); }
 
+@media screen and (max-width: 1000px) {
+  div.rmdmin {
+    height: 11vh; } }
+@media screen and (min-width: 1000px) {
+  div.rmdmin {
+    height: 25vh; } }
+
+@media screen and (max-width: 1000px) {
+  div.rmdmin {
+    height: 1vh; } }
+@media screen and (min-width: 1000px) {
+  div.rmdmin {
+    height: 15vh; } }
+
 div#rom_content:has(div#rom_content_content) {
   text-align: center;
   padding-bottom: 100px;
