--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -17,6 +17,7 @@ body{
 </style>
 
 <div 
+ style="opacity:0;"
  data-movieurl="/static/pic/opening.mp4" 
  data-baseurl=""  data-picurl="/static/pic" id="RomNavi" style="">
 <a href="index.html" data-linkurl="index.html" data-titlename="案内">案内</a>
