--- a/basecom/templates/basecom/contact.html
+++ b/basecom/templates/basecom/contact.html
@@ -4,7 +4,9 @@
 
 <style>
 </style>
-<div id="rm_contactform2">
+<div 
+ style="opacity:0;"
+ id="rm_contactform2">
 <form  method="post">
     {% csrf_token %}
 
