--- a/static/css/urllist.css
+++ b/static/css/urllist.css
@@ -66,18 +66,18 @@ div.rm_realurllist {
     box-sizing: border-box;
     position: relative;
     z-index: 2; }
-  div.rm_realurllist > div {
+  div.rm_realurllist div.rm_postblock {
     background-color: #ebe6e6;
     display: inline-block;
     text-align: center;
     padding: 0.0em;
     margin: 0.0em; }
     @media screen and (min-width: 0px) {
-      div.rm_realurllist > div {
+      div.rm_realurllist div.rm_postblock {
         width: 100vw;
         font-size: 2em; } }
     @media screen and (min-width: 600px) {
-      div.rm_realurllist > div {
+      div.rm_realurllist div.rm_postblock {
         width: 70vw;
         font-size: 1.5em; } }
   div.rm_realurllist a {
