--- a/static/css/articles.css
+++ b/static/css/articles.css
@@ -1,6 +1,10 @@
 @import url("https://fonts.googleapis.com/css?family=DotGothic16");
 div#rom_content:has(div#rom_content_content) {
   text-align: center; }
+  @media screen and (max-width: 1000px) {
+    div#rom_content:has(div#rom_content_content) {
+      margin-top: 15vh !important;
+      margin-bottom: 15vh !important; } }
 
 #rom_content_title {
   display: block;
