--- a/static/css/contact.css
+++ b/static/css/contact.css
@@ -6,7 +6,7 @@ div#rm_contactform2 {
   text-align: center; }
   @media screen and (max-width: 1000px) {
     div#rm_contactform2 {
-      margin-top: 9em; } }
+      margin-top: 4em; } }
   @media screen and (min-width: 1000px) {
     div#rm_contactform2 {
       margin-top: 10em; } }
@@ -60,7 +60,12 @@ div#rm_contactform2 {
     div#rm_contactform2 form textarea {
       display: block;
       width: 100%;
-      box-sizing: border-box;
-      height: 7em; }
+      box-sizing: border-box; }
+      @media screen and (max-width: 1000px) {
+        div#rm_contactform2 form textarea {
+          height: 15em !important; } }
+      @media screen and (min-width: 1000px) {
+        div#rm_contactform2 form textarea {
+          height: 7em  !important; } }
 
 /*# sourceMappingURL=contact.css.map */
