--- a/static/css/home.css
+++ b/static/css/home.css
@@ -38,6 +38,21 @@
     @media screen and (min-width: 600px) {
       #rom_urllist2 > img {
         width: 30%; } }
+  #rom_urllist2 a {
+    font-size: 1.5em;
+    display: inline-block;
+    text-decoration: none;
+    color: white;
+    white-space: nowrap;
+    padding-top: 0.1em; }
+    @media screen and (min-width: 0px) {
+      #rom_urllist2 a {
+        margin-left: 0.25em; } }
+    @media screen and (min-width: 600px) {
+      #rom_urllist2 a {
+        margin-left: 3em; } }
+    #rom_urllist2 a:visited {
+      color: white; }
   #rom_urllist2 div.wrapper {
     border-left: 2px solid white;
     text-align: left;
@@ -49,6 +64,24 @@
     @media screen and (min-width: 600px) {
       #rom_urllist2 div.wrapper {
         margin-left: 3em; } }
+    #rom_urllist2 div.wrapper a {
+      transition: transform 0.3s ease;
+      font-size: 1.5em;
+      display: inline-block;
+      text-decoration: none;
+      color: white;
+      white-space: nowrap;
+      padding-top: 0.1em; }
+      #rom_urllist2 div.wrapper a:hover {
+        transform: scale(1.05) rotate(1deg); }
+      @media screen and (min-width: 0px) {
+        #rom_urllist2 div.wrapper a {
+          margin-left: 0.25em; } }
+      @media screen and (min-width: 600px) {
+        #rom_urllist2 div.wrapper a {
+          margin-left: 3em; } }
+      #rom_urllist2 div.wrapper a:visited {
+        color: white; }
     @media screen and (max-width: 1000px) {
       #rom_urllist2 div.wrapper div.date {
         font-size: 0.4em !important;
@@ -59,21 +92,6 @@
       #rom_urllist2 div.wrapper div.date {
         display: inline-block !important;
         margin-right: 1em !important; } }
-  #rom_urllist2 a {
-    font-size: 1.5em;
-    display: inline-block;
-    text-decoration: none;
-    color: white;
-    white-space: nowrap;
-    padding-top: 0.1em; }
-    @media screen and (min-width: 0px) {
-      #rom_urllist2 a {
-        padding-left: 0.25em; } }
-    @media screen and (min-width: 600px) {
-      #rom_urllist2 a {
-        padding-left: 3em; } }
-    #rom_urllist2 a:visited {
-      color: white; }
 
 #romMidashi {
   background-color: #467a47;
