--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -52,11 +52,11 @@ html, body {
      <ul id="rm_iconlist">
       <a 
          style="background-image: url('/static/pic/twitter_ico.png');"
-         href="https://twitter.com/share?url=https://{{host}}/{{path}}&text={{descript}}"></a>
+         href="https://twitter.com/share?url=https://{{host}}{{path}}&text={{descript}}"></a>
 
       <a 
          style="background-image: url('/static/pic/line_ico.png');"
-         href="https://twitter.com/share?url=https://{{host}}/{{path}}&text=デモサイト稼働中!"></a>
+         href="https://twitter.com/share?url=https://{{host}}{{path}}&text=デモサイト稼働中!"></a>
      </ul>
      </footer>
 
